--- a/index.html
+++ b/index.html
@@ -24,28 +24,11 @@
 
 <body>
     <!-- navbar -->
-    <!-- <header>
-            <div class="nav-container">
-                <div class="container">
-                    <div class="row ">
-                        <div class="col-md-3 justify-content-start" id="logo">George Ferguson</div>
-        
-                        <div class="col-md-9">
-                            <ul class="nav justify-content-end">
-                                <li class="nav-item"><a class="nav-link " href="index.html">About</a></li>
-                                <li class="nav-item"><a class="nav-link active" href="portfolio.html">Portfolio</a></li>
-                                <li class="nav-item"><a class="nav-link " href="contact.html">Contact</a></li>
-                            </ul>
-                        </div> <!-- closes col class -->
-    <!-- </div> closes row class -->
-    <!-- </div> closes container class -->
-    <!-- </div> closes nav-container class -->
-    <!-- </header> --> 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-custom">
         <h1>Casey Ferguson</h1>
         <div class="collapse navbar-collapse mr-auto" id="navbarText">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="index.html">About Me</a>
                 </li>
                 <li class="nav-item">
@@ -60,42 +43,28 @@
     <!-- about me card  -->
     <div class="container">
         <div class="row">
-            <div class="col-md-10 offset-md-1">
-                <div class="card mb-3">
-                    <div class="row no-gutters">
-                        <div class="col-md-3">
-                            <img src="assets/images/casey.jpg" class="card-img" alt="casey">
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h3 class="card-title">About Me</h3>
-                                <p class="card-text">Casey joined Cartus in January of 2015 as a Real Estate Contract
-                                    and Closing Specialist, and has since moved into the role of Expatriate Assignment
-                                    Consultant, where she specializes in both domestic and international consulting.
-                                    <br>
-                                    <br>
-                                    Throughout her career at Cartus, Casey has approached her work with passion, and is
-                                    adept at identifying opportunities to improve efficiencies to benefit the
-                                    transferees’ experience with their move, and her team at large.
-                                    <br>
-                                    <br>
-                                    She curates strong relationships with her transferees and her colleagues, and has
-                                    always taken initiative to take part in working groups to improve processes, as well
-                                    as founding and chairing the Real Estate Services Community and Planning Committee.
-                                    <br>
-                                    <br>
-                                    Casey graduated from the University of Connecticut with a Bachelor of Arts Degree in
-                                    Speech, Language, and Hearing Sciences.
-                                    <br>
-                                    <br>
-                                    Casey has a love for pottery and baking, and currently resides in Newtown, CT with
-                                    her husband and their dog, Teddy.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div class="col-md-10 offset-md-1 page-content">
+                <h2>About Me</h2>
+                <hr />
+                <p><img id="bioimage" src="assets/images/casey.jpg" width="151" height="201" alt="teddy">
+                    <p>Casey joined Cartus in January of 2015 as a Real Estate Contract and Closing Specialist,
+                        and has since moved into the role of Expatriate Assignment Consultant, where she
+                        specializes in both domestic and international consulting.</p>
+                    <p>Throughout her career at Cartus, Casey has approached her work with passion, and is adept
+                        at identifying opportunities to improve efficiencies to benefit the transferees’
+                        experience with their move, and her team at large.</p>
+                    <p>She curates strong relationships with her transferees and her colleagues, and has always
+                        taken initiative to take part in working groups to improve processes, as well as
+                        founding and chairing the Real Estate Services Community and Planning Committee. </p>
+                    <p>Casey graduated from the University of Connecticut with a Bachelor of Arts Degree in
+                        Speech, Language, and Hearing Sciences.</p>
+                    <p>Casey has a love for pottery and baking, and currently resides in Newtown, CT with her
+                        husband and their dog, Teddy. </p>
+                </p>
+
             </div>
         </div>
+    </div>
     </div>
 </body>
 
