--- a/portfolio.html
+++ b/portfolio.html
@@ -16,9 +16,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-        <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-    
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+
 
     <title>Casey Ferguson - Portfolio</title>
 </head>
@@ -29,10 +29,10 @@
         <h1>Casey Ferguson</h1>
         <div class="collapse navbar-collapse mr-auto" id="navbarText">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="index.html">About Me</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="portfolio.html">Portfolio</a>
                 </li>
                 <li class="nav-item">
@@ -43,61 +43,71 @@
     </nav>
     <!-- cards -->
     <div class="container">
-        <div class="row">
-            <div class="col-md-10 offset-md-1">
-                <div class="card-deck">
-                    <div class="col-md-4">
-                        <img src="assets/images/pup.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Hangman</h5>
-                            <p class="card-text">This is an explanation of the project.</p>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <img src="assets/images/pig.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">RPG Game</h5>
-                            <p class="card-text">This is an explanation of the project.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <img src="assets/images/pup2.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Trivia Game</h5>
-                            <p class="card-text">This is an explanation of the project.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-10 offset-md-1">
-                <div class="card-deck">
-                    <div class="col-md-4">
-                        <img src="assets/images/horse.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Rutgers Info Widget</h5>
-                            <p class="card-text">This is an explanation of the project.</p>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <img src="assets/images/rhino.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Rock, Paper, Scissors</h5>
-                            <p class="card-text">This is an explanation of the project.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <img src="assets/images/tiger.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Extra for Symmetry</h5>
-                            <p class="card-text">This is an explanation of the project.</p>
-                        </div>
-                    </div>
-                </div>
 
+        <div class="row">
+            <div class="col-md-10 offset-md-1 portfolio-body">
+                <!-- first Row -->
+                <div class="row">
+                    <div class="col-sm-4 portfolio-card">
+                        <div class="card">
+                            <img src="assets/images/pup.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Hangman</h5>
+                                <p class="card-text">This is an explanation of the project.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 portfolio-card">
+                        <div class="card">
+                            <img src="assets/images/pig.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">RPG Game</h5>
+                                <p class="card-text">This is an explanation of the project.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 portfolio-card">
+                        <div class="card">
+                            <img src="assets/images/pup2.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Trivia Game</h5>
+                                <p class="card-text">This is an explanation of the project.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- second row -->
+                <div class="row">
+                    <div class="col-sm-4 portfolio-card">
+                        <div class="card">
+                            <img src="assets/images/horse.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Rutgers Info Widget</h5>
+                                <p class="card-text">This is an explanation of the project.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 portfolio-card">
+                        <div class="card">
+                            <img src="assets/images/rhino.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Rock, Paper, Scissors</h5>
+                                <p class="card-text">This is an explanation of the project.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 portfolio-card">
+                        <div class="card">
+                            <img src="assets/images/tiger.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Extra for Symmetry</h5>
+                                <p class="card-text">This is an explanation of the project.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
