--- a/contact.html
+++ b/contact.html
@@ -16,9 +16,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-        <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-    
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+
     <title>Casey Ferguson - Portfolio</title>
 </head>
 
@@ -26,6 +26,10 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h1>Casey Ferguson</h1>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="collapse navbar-collapse mr-auto" id="navbarText">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
@@ -40,6 +44,59 @@
             </ul>
         </div>
     </nav>
+    <!-- contact form -->
+    <form>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-10 offset-md-1 contact-body">
+                    <h2>Contact me!</h2>
+                    <!-- name field -->
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="exampleFormControlInput1">Name</label>
+                                <input type="name" class="form-control" id="exampleFormControlInput1">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- email field -->
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="exampleFormControlInput1">Email Address</label>
+                                <input type="email" class="form-control" id="exampleFormControlInput1">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- phone number field -->
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="exampleFormControlInput1">Phone Number</label>
+                                <input type="phone" class="form-control" id="exampleFormControlInput1">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- message field -->
+                    <div class="row">
+                        <div class="col-md-8">
+                            <div class="form-group">
+                                <label for="exampleFormControlTextarea1">Message:</label>
+                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- submit button -->
+                    <input class="btn btn-outline-secondary" type="submit" value="Submit">
+                </div>
+            </div>
+
+        </div>
+    </form>
+    <!-- footer -->
+    <footer>
+        casey ferg, inc.
+    </footer>
 
 </body>
 
