--- a/portfolio.html
+++ b/portfolio.html
@@ -27,6 +27,10 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h1>Casey Ferguson</h1>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="collapse navbar-collapse mr-auto" id="navbarText">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
@@ -112,6 +116,10 @@
         </div>
 
     </div>
+    <!-- footer -->
+    <footer>
+        casey ferg, inc.
+    </footer>
 
 </body>
 
